# conda-rlock

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  NOTES.md  README.md  example.rlock.yaml  pixi.toml  pyproject.toml  rlock.yaml
.github/workflows/: release.yaml
conda_rlock/: hooks.py
conda_rlock_cli/: hooks.py
crates/conda_rlock/src/: lib.rs
python/conda_rlock_plugin/: cli.py  hooks.py
recipe/: build_base.bat  build_base.sh  meta.yaml  recipe.yaml
src/: conda.rs  lib.rs  pypi.rs
src/snapshots/: conda_rlock__pypi__test__get_pypi_packages.snap  conda_rlock__pypi__test__python_package.snap
test-data/test-install-prefix/: README.md
test-data/test-install-prefix-corrupted/: README.md
test-data/test-install-prefix/conda-meta/: _libgcc_mutex-0.1-main.json  _openmp_mutex-5.1-1_gnu.json  bzip2-1.0.8-h5eee18b_6.json  ca-certificates-2024.12.31-h06a4308_0.json  expat-2.6.4-h6a678d5_0.json  history  ld_impl_linux-64-2.40-h12ee557_0.json  libffi-3.4.4-h6a678d5_1.json  libgcc-ng-11.2.0-h1234567_1.json  libgomp-11.2.0-h1234567_1.json  libmpdec-4.0.0-h5eee18b_0.json  libstdcxx-ng-11.2.0-h1234567_1.json  libuuid-1.41.5-h5eee18b_0.json  ncurses-6.4-h6a678d5_0.json  openssl-3.0.15-h5eee18b_0.json  pip-25.0-py313h06a4308_0.json  python-3.13.2-hf623796_100_cp313.json  python_abi-3.13-0_cp313.json  readline-8.2-h5eee18b_0.json  setuptools-75.8.0-py313h06a4308_0.json  sqlite-3.45.3-h5eee18b_0.json  tk-8.6.14-h39e8969_0.json  tzdata-2025a-h04d1e81_0.json  wheel-0.45.1-py313h06a4308_0.json  xz-5.6.4-h5eee18b_1.json  zlib-1.2.13-h5eee18b_1.json
tests/integration/: test_create_lock.py
tests/integration/__snapshots__/: test_create_lock.ambr
tests/unit/: test_cli.py
