[package]
name = "conda-rlock"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "conda_rlock"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.11.6"
log = "0.4.25"
pyo3 = { version = "0.23.4", features = ["extension-module"] }
rattler_conda_types = "0.30.0"
rattler_installs_packages = "0.10.0"
rattler_lock = "0.22.39"
url = "2.2.2"

[build-dependencies]
pyo3-build-config = "0.22.6"
