[package]
name = "conda-rlock"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "conda_rlock"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
dirs = "=5.0.1"
env_logger = "0.11.6"
indexmap = { version = "2.7.1", features = ["serde"] }
log = "0.4.25"
miette = { version = "7.5.0", features = ["fancy"] }
pep440_rs = { version = "0.7.3" }
pep508_rs = { version = "0.9.2" }
pyo3 = { version = "0.23.4", features = ["extension-module", "abi3-py39"] }
rattler_conda_types = "0.31.3"
# rattler_installs_packages = "0.10.0"
rattler_lock = "0.22.39"
rattler_pypi_interop = { git = "https://github.com/travishathaway/rattler", branch = "issue-1044" }
reqwest = { version = "0.12.3", default-features = false, features = ["json", "stream"] }
reqwest-middleware = "0.4.0"
serde = { version = "1.0.218", features = ["derive"] }
tokio = "1.43.0"
url = "2.2.2"

[build-dependencies]
pyo3-build-config = "0.22.6"

[dev-dependencies]
insta = { version = "1.42.1", features = ["ron"] }
rstest = "0.24.0"
