[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "conda-auth"
dynamic = ["version"]
description = "A plugin providing lock file capability for conda"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
  "click",
  "conda",
  "requests",
  "ruamel.yaml",
]

[project.entry-points.conda]
conda-auth = "conda_rlock_cli.hook"

[tool.setuptools.packages]
find = {}

[tool.hatch.version]
source = "vcs"
